fixed layout issues

--- a/style.css
+++ b/style.css
@@ -56,9 +56,16 @@ body {
     margin: -3px;
     border-left: 1px solid white;
 }
+.myProfile > * {
+    position: relative;
+    top:-150px;
+}
+
 .myProfileSideBar {
     position: relative;
-    left: 100px;
+    left: -225px;
+    top: 0px;
+    margin: 0 auto;
 }
 .myProfileSideBar ul {
     list-style-type: none;
@@ -262,16 +269,15 @@ p.contact {
 
 .myProfile {
     position: relative;
-    top: -150px;
-    left: 300px;
+    top: 200px;
+    left: 100px;
     border: 4px solid dodgerblue;
-    width: 1000px;
-    height: 400px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    width: 600px;
+    height: 200px;
     margin: 0 auto;
     padding: 8px;
 }
+
 
 /*Bootstrap columns*/
 
